	* optimized disk cache
	* optimized .torrent file parsing
	* optimized initialization of storage when adding a torrent
	* added support for adding torrents asynchronously (for improved startup
	  performance)
	* added support for asynchronous disk I/O
	* almost completely changed the storage interface (for custom storage)
	* added support for hashing pieces in multiple threads


	* improve DHT routing table to not create an unbalanced tree
	* fix bug in uTP that would cause any connection taking more than one second
	  to connect be timed out (introduced in the vulnerability path)
	* fixed falling back to sending UDP packets direct when socks proxy fails
	* fixed total_wanted bug (when setting file priorities in add_torrent_params)

1.0.6 release

	* fixed uTP vulnerability
	* make utf8 conversions more lenient
	* fix loading of piece priorities from resume data
	* improved seed-mode handling (seed-mode will now automatically be left when
	  performing operations implying it's not a seed)
	* fixed issue with file priorities and override resume data
	* fix request queue size performance issue
	* slightly improve UDP tracker performance
	* fix http scrape
	* add missing port mapping functions to python binding
	* fix bound-checking issue in bdecoder
	* expose missing dht_settings fields to python
	* add function to query the DHT settings
	* fix bug in 'dont_count_slow_torrents' feature, which would start too many
	  torrents

1.0.5 release

	* improve ip_voter to avoid flapping
	* fixed bug when max_peerlist_size was set to 0
	* fix issues with missing exported symbols when building dll
	* fix division by zero bug in edge case while connecting peers

1.0.4 release

	* fix bug in python binding for file_progress on torrents with no metadata
	* fix assert when removing a connected web seed
	* fix bug in tracker timeout logic
	* switch UPnP post back to HTTP 1.1
	* support conditional DHT get
	* OpenSSL build fixes
	* fix DHT scrape bug

1.0.3 release
