@@ -74,6 +74,7 @@
 	* added support for hashing pieces in multiple threads
 
 
+	* fix auto-manage bug with announce to tracker/lsd/dht limits
 	* improve DHT routing table to not create an unbalanced tree
 	* fix bug in uTP that would cause any connection taking more than one second
 	  to connect be timed out (introduced in the vulnerability path)
